# PythonQuiz

./: README.md  authorize.py  main.py  pyproject.toml  quiz.csv  requirements.txt  results.csv  users.csv
results/: Baichik.csv  akmatoff.csv
