[tool.poetry]
name = "runner"
version = "0.1.0"
description = ""
authors = ["Azim Akmatov <azim.akmatov1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
colored = "^1.4"
login = "^0.0.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
